update-manager (1:0.122) UNRELEASEDkarmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - add handler to check for wl module and transition
      to bcmwl-kernel-source (LP: #381684)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Jun 2009 09:31:53 +0200

update-manager (1:0.121) karmic; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - remove obsolete kubuntu-kde4-desktop meta package
  * DistUpgrade/DistUpgradeCache.py:
    - when guessing missing meta-packages stop after
      the first one was found
    - use internal _lookupPkgRecord() instead of 
      pkg._lookupRecord
  * DistUpgrade/DistUpgradeQuirks.py:
    - move the kubuntu-kde4-desktop key dependency transition
      detection to the from_hardy quirks handler (LP: #368459)
  * UpdateManager/Core/MyCache.py:
    - always disable version number range of the changes in the
      details (LP: #251349)
    - make the distro supporting the changelogs easier to customize
  * DistUpgrade/xorg_fix_proprietary.py:
    - better comment when explaining why stuff got commented out
      (LP: #300504)
  * DistUpgrade/DistUpgradeController.py:
    - after updating the sources.list, check for both existance
      and downloadability of the BaseMetaPkgs and abort if that
      is not the case (thanks to Ulrich Kalkkuhl) LP: #370062
  * UpdateManager/UpdateManager.py:
    - show origin field for other updates (like PPAs) to make it
      easier to see what comes from where (part of the 
      foundations-karmic-apturl-policy spec)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 05 Jun 2009 20:53:37 +0200

update-manager (1:0.120) karmic; urgency=low

  * The 'Ready for karmic' version
  * DistUpgrade/DistUpgradeController.py:
    - do not fail in partial upgrades if apport must be
      enabled (LP: #357755)
    - when rewriting sources.list, check for cdrom entries
      that do not have associated list files and disable
      them (LP: #366459)