@@ -3,6 +3,12 @@ update-manager (1:0.122) UNRELEASEDkarmic; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - add handler to check for wl module and transition
       to bcmwl-kernel-source (LP: #381684)
+  * DistUpgrade/DistUpgradeViewNonInteractive.py:
+    - add bool option "NonInteractive/DpkgProgressLog" to write
+      a timing log of the upgrade (for the foundations-karmic-pre-unpacking
+      spec)
+  * AutoUpgradeTester/chart_dpkg_progress.py:
+    - add simple tool that can read the dpkg progress information
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Jun 2009 09:31:53 +0200
 
